<resources>
    <string name="app_name">Weather-Application</string>
    <string name="action_settings">Settings</string>
    <string name="attribution">Weather data by OpenWeatherMap.org</string>
    <string name="error_fetch_weather">Could not fetch weather data</string>
    <string name="error_location_unavailable">Could not get current location</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="monday">Monday</string>
    <string name="sky_is_clear">sky is clear</string>
    <string name="nineteen_degrees">19°</string>
    <string name="fifteen_degrees">15°</string>
    <string name="description">Description</string>
    <string name="min">Minimum</string>
    <string name="max">Maximum</string>
    <string name="hum">Humidity</string>
    <string name="morn">Morning</string>
    <string name="even">Evening</string>
    <string name="night">Night</string>
    <string name="rain">Rain</string>
    <string name="clouds">Clouds</string>
    <string name="speed">Speed</string>
    <string name="pressure">Pressure</string>
    <string name="day_details">Details of the day</string>
    <string name="insert_city">Insert City Name</string>
    <string name="bttnString">Get Weather of Your Location</string>
    <string name="bttnSearchString">Search</string>
</resources>
