<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
       >


        <TableLayout
            android:id="@+id/tl_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@android:color/background_light"
            android:orientation="vertical"
            android:padding="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/today"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/tv_day_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="14"
                    android:background="@android:drawable/editbox_background_normal"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/description"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/tv_day_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="14"
                    android:background="@android:drawable/editbox_background_normal"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/min"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/tv_day_min"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="14"
                    android:background="@android:drawable/editbox_background_normal"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/max"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/tv_day_max"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="14"
                    android:background="@android:drawable/editbox_background_normal"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/hum"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/tv_day_hum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="14"
                    android:background="@android:drawable/editbox_background_normal"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/night"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/tv_day_night"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="14"
                    android:background="@android:drawable/editbox_background_normal"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/even"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/tv_day_even"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="14"
                    android:background="@android:drawable/editbox_background_normal"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/morn"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/tv_day_morn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="14"
                    android:background="@android:drawable/editbox_background_normal"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/pressure"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/tv_pressure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="14"
                    android:background="@android:drawable/editbox_background_normal"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/speed"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/tv_speed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="14"
                    android:background="@android:drawable/editbox_background_normal"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/clouds"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/tv_clouds"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="14"
                    android:background="@android:drawable/editbox_background_normal"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/rain"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/tv_rain"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_column="14"
                    android:background="@android:drawable/editbox_background_normal"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    />
            </TableRow>






        </TableLayout>



    </RelativeLayout>
</ScrollView>
